Fixed some styling on mobile

--- a/themes/tinysociety/assets/scss/_custom.scss
+++ b/themes/tinysociety/assets/scss/_custom.scss
@@ -200,7 +200,7 @@ h6.regular-text {
 }
 
 @media only screen and (max-width: 768px) {
-	.header-overlay .header_cta {
+	.header-overlay .header_cta, div.social-icons {
 		display: none;
 	}
 	h1.home-title {
